--- a/prkym/Views/NewItemPage.xaml
+++ b/prkym/Views/NewItemPage.xaml
@@ -6,10 +6,10 @@
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+            <Label Text="Servis" FontSize="Medium" />
+            <Entry Text="{Binding Item.Text}" d:Text="Ime" FontSize="Small" />
+            <Label Text="Opis Servisa" FontSize="Medium" />
+            <Entry Text="{Binding Item.Description}" d:Text="Opis" FontSize="Small" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
